--- a/README.org
+++ b/README.org
@@ -20,8 +20,7 @@ Footprint for ACP CA9 horizontal trimpo.
 ** Author
 Cédric Brégardis (cedric.bregardis <at> gmail.com)
 ** Licence
-   This work is licensed under the Creative Commons
-   Attribution-NonCommercial-ShareAlike 3.0 Unported License. To view a copy of
-   this license, visit [[http://creativecommons.org/licenses/by-nc-sa/3.0/]] or send
-   a letter to Creative Commons, 171 Second Street, Suite 300, San Francisco,
-   California, 94105, USA.
+This work is licensed under the Creative Commons Attribution 3.0 Unported
+License. To view a copy of this license, visit
+http://creativecommons.org/licenses/by/3.0/ or send a letter to Creative
+Commons, 171 Second Street, Suite 300, San Francisco, California, 94105, USA.
